[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/island.gd" type="Script" id=1]
[ext_resource path="res://textures/cloud_ui_dot.png" type="Texture" id=2]
[ext_resource path="res://textures/rect_w.png" type="Texture" id=3]
[ext_resource path="res://textures/island01.tex" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 110, 110 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 106.94, 103.796 )

[node name="island" type="StaticBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 512
collision/mask = 512
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 1 )

[node name="dot" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( -83.3908, -81.1247 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="dot1" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 88.6092, 89.8753 )
transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
modulate = Color( 0, 0.0625, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

visibility/visible = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="ray_up" type="RayCast2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 0, -200 )
layer_mask = 512
type_mask = 15

[node name="ray_right" type="RayCast2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 200, 0 )
layer_mask = 512
type_mask = 15

[node name="ray_down" type="RayCast2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( 0, 200 )
layer_mask = 512
type_mask = 15

[node name="ray_left" type="RayCast2D" parent="."]

visibility/visible = false
transform/pos = Vector2( 0, 1 )
enabled = true
cast_to = Vector2( -200, 0 )
layer_mask = 512
type_mask = 15

[node name="bg1" type="Patch9Frame" parent="."]

visibility/visible = false
visibility/self_opacity = 0.4
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -112.0
margin/top = -112.0
margin/right = 112.0
margin/bottom = 112.0
texture = ExtResource( 3 )
patch_margin/left = 60
patch_margin/top = 60
patch_margin/right = 60
patch_margin/bottom = 60

[node name="island01" type="Sprite" parent="."]

texture = ExtResource( 4 )

[node name="Button" type="Button" parent="."]

visibility/self_opacity = 0.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -112.0
margin/top = -112.0
margin/right = 112.0
margin/bottom = 112.0
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
flat = false

[node name="penget" type="Area2D" parent="." groups=[
"island",
]]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape2D" parent="penget"]

visibility/visible = false
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]

[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]

[connection signal="body_enter" from="penget" to="." method="_on_penget_body_enter"]

[connection signal="body_exit" from="penget" to="." method="_on_penget_body_exit"]


